add to existing university
